--- a/toDo.txt
+++ b/toDo.txt
@@ -2,19 +2,20 @@ MVP:
     search atau email verification
 
 Langkah awal:
-    1. buat seed
-    2. masukkan data kedalam database
+    1. buat seed                                    | V
+    2. masukkan data kedalam database               | V
 
 Webpage:
-    1. masukkan homepage ke ejs
-    2. membuat login page
-    3. membuat register page
-    4. checkout page
+    1. masukkan homepage ke ejs                     |
+    2. membuat login page                           |
+    3. membuat register page                        | 
+    4. checkout page                                |
+    5. membuat list cart                            |
 
 Sequelize:
-    1. buat relasi antar tabel
-    2. bisa menambahkan user pada Sequelize
-    3. login pada web & logout
-    4. fitur add book to cart
-    5. fitur checkout
-    6. fitur view by category
+    1. buat relasi antar tabel                      | V
+    2. bisa menambahkan user pada Sequelize         | V
+    3. login pada web & logout                      | setelah lecture 
+    4. fitur add book to cart                       | 
+    5. fitur checkout                               |
+    6. fitur view by category                       |
